fixed all scrollbar bugs

--- a/css/exhibitions.css
+++ b/css/exhibitions.css
@@ -23,6 +23,5 @@
 .visiting-exhibitions-container h2,
 .regular-exhibitions-container h2 {
     margin: 50px 0 0 10px;
-    width: 100%;
 }
 
