--- a/css/visit.css
+++ b/css/visit.css
@@ -16,7 +16,6 @@
 
 .visit-admission h2 {
     margin-left: 10px;
-    width: 100%;
 }
 
 .visit-body h2 .h-highlight {
@@ -111,5 +110,4 @@
 
 .limited-events-container h2 {
     margin: 50px 0 0 10px;
-    width: 100%;
 }
